--- a/Edabit/Medium/index1.html
+++ b/Edabit/Medium/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="test.js"></script>
+    <script src="Simple Encoder.js"></script>
 </body>
 
 </html>
