--- a/Edabit/20220227/index1.html
+++ b/Edabit/20220227/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="Simple Encoder.js"></script>
+    <script src="Return the First Element in an Array.js"></script>
 </body>
 
 </html>
