--- a/Edabit/20220302/index1.html
+++ b/Edabit/20220302/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="Which Generation Are You.js".js"></script>
+    <script src="Make a Circle with OOP.js"></script>
 </body>
 
 </html>
