--- a/Edabit/20220305/index1.html
+++ b/Edabit/20220305/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5.Find the Discount.js"></script>
+    <script src="5.Fix the Error: Flattening an Array.js"></script>
 </body>
 
 </html>
