--- a/Edabit/20220309/index1.html
+++ b/Edabit/20220309/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5.Move Capital Letters to the Front.js"></script>
+    <script src="5.Special Arrays.js"></script>
 </body>
 
 </html>
