--- a/Edabit/20220310/index1.html
+++ b/Edabit/20220310/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5.Special Arrays.js"></script>
+    <script src="5.Check-if-All-Values-Are-True.js"></script>
 </body>
 
 </html>
