--- a/Edabit/20220315/index1.html
+++ b/Edabit/20220315/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5.Ones,Threes-and-Nines.js"></script>
+    <script src="5..js"></script>
 </body>
 
 </html>
