--- a/Edabit/20220316/index1.html
+++ b/Edabit/20220316/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5..js"></script>
+    <script src="5.Number-of-Apples-Left.js"></script>
 </body>
 
 </html>
