--- a/Edabit/20223017/index1.html
+++ b/Edabit/20223017/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5.Number-of-Apples-Left.js"></script>
+    <script src="5.H4ck3r-Sp34k.js"></script>
 </body>
 
 </html>
