--- a/Edabit/20220318/index1.html
+++ b/Edabit/20220318/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5.H4ck3r-Sp34k.js"></script>
+    <script src="5.Return-the-Sum-of-the-Two-Smallest-Numbers.js"></script>
 </body>
 
 </html>
