--- a/Edabit/20220319/index1.html
+++ b/Edabit/20220319/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5.Return-the-Sum-of-the-Two-Smallest-Numbers.js"></script>
+    <script src="5.Return-the-Middle-Character(s)-of-a-String.js"></script>
 </body>
 
 </html>
