--- a/Edabit/20220322/index1.html
+++ b/Edabit/20220322/index1.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Test</h1>
 
-    <script src="5.Neutralisation.js"></script>
+    <script src="5.Double-Letters.js"></script>
 </body>
 
 </html>
